Add dataset content endpoint
